--- a/keydb/Chart.yaml
+++ b/keydb/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
 name: keydb
-description: A Helm chart for KeyDB multimaster setup
+description: A Helm chart for KeyDB
 type: application
-version: 0.48.0
+version: 1.0.1
 keywords:
 - keydb
 - redis
@@ -13,11 +13,11 @@ keywords:
 - high-availability
 home: https://keydb.dev
 maintainers:
-- email: avoronkov@enapter.com
-  name: Antiarchitect
-  url: https://github.com/Antiarchitect
+- email: fn@filipniko.cz
+  name: Filip Niko
+  url: https://github.com/fniko
 sources:
-- https://github.com/Enapter/charts
-- https://github.com/JohnSully/KeyDB
-icon: https://enapter.github.io/charts/keydb.png
-appVersion: 6.3.2
+- https://github.com/fniko/keydb-helm-chart
+- https://github.com/Snapchat/KeyDB
+icon: https://github.com/fniko/keydb-helm-chart/icon.pgn
+appVersion: 6.3.4
