Fix typo in icon URL

--- a/charts/keydb/Chart.yaml
+++ b/charts/keydb/Chart.yaml
@@ -19,5 +19,5 @@ maintainers:
 sources:
 - https://github.com/fniko/keydb-helm-chart
 - https://github.com/Snapchat/KeyDB
-icon: https://github.com/fniko/keydb-helm-chart/icon.pgn
+icon: https://github.com/fniko/keydb-helm-chart/icon.png
 appVersion: 6.3.4
